Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29757

qmake shouldn't set pdb name by default

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.0
    • 4.8.4, 5.0.1
    • Build tools: qmake
    • None
    • Win7 SP1 x64, VS10
    • 07f668ab87972d6c4761496a6c7680d2f9d37021

    Description

      qmake always sets ProgramDataBaseFileName to .\ when creating VC project files by default.
      This seriously complicates our workflow since pdb files are created in the project directories rather than the target dirs and they are named vcXXX.pdb. This means:

      1. people always forget the pdbs when copying libs around
      2. this doesn't work out with also having release builds with debug symbols
      3. if you want to put several libs in the same folder they all reference the same vcXXX.pdb so there's no easy way to get symbols for all of them
      4. you end up with a huge load of linker warnings about missing vcXXX.pdb that can't be disabled

      It also doesn't make any sense to set this since the default already creates such a file (plus a proper one in the target dir):
      http://msdn.microsoft.com/en-us/library/yd4f8bd1%28v=vs.100%29.aspx

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            trass3r Unk
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes