qmake/generators/win32/msvc_vcproj.cpp
@@ -995,7 +995,6 @@ void VcprojGenerator::initCompilerTool()
         conf.compiler.Optimization = optimizeDisabled;
     }
     conf.compiler.AssemblerListingLocation = placement ;
-    conf.compiler.ProgramDataBaseFileName = ".\\" ;
     conf.compiler.ObjectFile = placement ;
     conf.compiler.ExceptionHandling = ehNone;
     // PCH
